--- a/app/src/main/res/layout/adapter_delite.xml
+++ b/app/src/main/res/layout/adapter_delite.xml
@@ -2,8 +2,9 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:background="#1E7FD9">
+    android:layout_height="65dp"
+    android:background="#9BCFFF"
+    android:layout_marginBottom="15dp">
     <TextView
         android:id="@+id/textRc"
         android:layout_width="wrap_content"
@@ -11,5 +12,5 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:textSize="30sp"
-        android:background="@color/black"/>
+        android:textColor="@color/white"/>
 </RelativeLayout>
