--- a/app/src/main/res/layout/custom_edit_text.xml
+++ b/app/src/main/res/layout/custom_edit_text.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent">
     <EditText
         android:id="@+id/editText"
-        android:layout_width="110dp"
+        android:layout_width="match_parent"
         android:layout_height="35dp"
-        android:background="#C5D3DF"
+        android:background="#9BCFFF"
         android:gravity="center"
         android:textColor="@color/black"
         android:textSize="25sp"
@@ -15,7 +15,7 @@
     <View
         android:layout_below="@id/editText"
         android:id="@+id/line"
-        android:layout_width="110dp"
+        android:layout_width="match_parent"
         android:layout_height="5dp"
         android:background="@color/black"/>
 </RelativeLayout>
